[package]
name = "mytheme"
version = "0.0.2"
description = "Mytheme PRQL Query Compiler"
license-file = "LICENSE"
default-run = "mt"
repository = "https://github.com/MythemeCloud/cargo.git"

[build]
target-dir = "Target"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossbeam = { version = "0.8.4" }
prql-compiler = "0.12.2"
rayon = { version = "1.10.0" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
unbug = { version = "0.4.0" }

[lib]
name = "mt"
path = "Source/Library/main.rs"

[[bin]]
name = "mt"
path = "Source/Binary/mt.rs"

[[bin]]
name = "mytheme"
path = "Source/Binary/mytheme.rs"

[features]
default = []
